# ntree

./: CALL_CHAIN_EXPLANATION.md  Cargo.toml  Claude.md  LICENSE  README.md  debug_test_break.rs  debug_while.rs  test_mermaid.html  test_sample.rs
examples/: cfg14_demo.rs  cfg_branch_demo.rs  cfg_demo.rs  complete_dependency_demo.rs  complexity_analysis_demo.rs  data_export_demo.rs  debug_if.rs  import_extraction_demo.rs  legacy_api_demo.rs  modern_api_demo.rs  module_graph_demo.rs  multi_language_demo.rs  parity_test.rs  regex_symbol_search_demo.rs  unified_api_demo.rs  unified_call_graph_demo.rs  usage.rs  workspace_demo.rs
src/: api.rs  extractor.rs  lib.rs  parser.rs  reader.rs
test_samples/: TestSample.java  test_python_calls.py  test_python_classes.py  test_python_imports.py  test_rust_structures.rs  test_sample.c  test_sample.cpp  test_sample.js  test_sample.ts
tests/: api_test.rs  basic_block_test.rs  cfg_annotations_test.rs  cfg_branch_test.rs  cfg_break_continue_test.rs  cfg_early_exit_test.rs  cfg_for_test.rs  cfg_ir_test.rs  cfg_match_test.rs  cfg_return_test.rs  cfg_test.rs  cfg_while_test.rs  complexity_analyzer_test.rs  cross_platform_test.rs  data_flow_analysis_test.rs  debug_early_exit_test.rs  debug_while_test.rs  edge_cases_test.rs  error_test.rs  extractor_test.rs  for_ir_test.rs  full_example_test.rs  function_test.rs  incremental_test.rs  integration_test.rs  interprocedural_test.rs  items_test.rs  mermaid_escaping_test.rs  multi_language_test.rs  new_api_integration_test.rs  normalized_labels_test.rs  parser_test.rs  reader_test.rs  (+3 more)
(+197 files in other folders)
