[package]
name = "ntree"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["jgYro"]

[dependencies]
tree-sitter = "0.25.10"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwalk = "0.8.1"
sha2 = "0.10"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
